gccida/g1/dump_tree_statistics
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_tree_statistics/src/tree.c:4974:1: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
lang_hooks_0.print_statistics( ); 
^~~~~~~~~~~~
lang_hooks
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_tree_statistics/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_tree_statistics/src/obj/tree.o] Error 1
